# oi

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  dev.oid.toml  flake.nix
.github/workflows/: deploy.yml
cmake/: InstallOilRuntimeBundle.cmake.in  InstallOilSdkConfig.cmake.in  oilConfig.cmake.in
examples/jit-oil/trivial_jit_shared_example/: CMakeLists.txt  README  main.cpp
include/oi/: IntrospectionResult-inl.h  IntrospectionResult.h  oi-jit-inl.h
include/oi/result/: Element.h
include/oi/types/: st.h
oi/: CodeGen.cpp  FuncGen.cpp  IntrospectionResult.cpp  OIDebugger.cpp  SymbolService.cpp  SymbolService.h
oi/type_graph/: PassManager.cpp
test/: CMakeLists.txt  ci.oid.toml
test/install_smoke/: CMakeLists.txt  liboil_smoke.cpp
test/integration/: CMakeLists.txt
test/oil/: CMakeLists.txt  oil_array_leaf_structs.cpp  oil_list_leaf_structs.cpp  oil_nested_struct.cpp  oil_plain_struct.cpp  oil_rocksdb_core_local_array.cpp  oil_vector_leaf_structs.cpp  oil_vector_std_string.cpp
test/oil/util/: core_local.h
tools/: OILTypeGen.cpp  config_gen.py
types/: array_type.toml  cxx11_list_type.toml  cxx11_string_type.toml  list_type.toml  rocksdb_core_local_array_type.toml  seq_type.toml
